taccsite_cms/static/site_cms/css/modules/sortableTable.css
/**
 * Coupled with sortableTable.js (table.is-sortable).
 * Table look and feel come from Core-Styles base (elements/table).
 * TODO: Consider a shared sortable-table component in TACC/Core-Components.
 */

table.is-sortable {
  /* Buttons */
  & .is-sortable__sort {
    width: 100%; /* so entire cell is clickable */

    /* To improve legibility during visible focus */
    &:focus-visible {
      outline-offset: 0.25em;
    }

    /* So known button styles have no ill effect */
    &.btn-link,
    &.c-button--as-link {
        line-height: inherit;
        height: 1lh;
        justify-content: start;
    }
    &.c-button--as-link {
        height: 1lh;
    }
    &.btn-link {
        padding: 0;
    }
  }

  /* Sort indicators */
  & th[aria-sort="ascending"] .is-sortable__sort::after { content: '▲'; }
  & th[aria-sort="descending"] .is-sortable__sort::after { content: '▼'; }
  & th[aria-sort="ascending"] .is-sortable__sort,
  & th[aria-sort="descending"] .is-sortable__sort {
    &::after {
      font-size: smaller;
    }
    &:not(.c-button--as-link)::after {
      margin-inline-start: 0.35em;
    }
  }
}

